[gd_scene load_steps=21 format=3 uid="uid://d1657tidee7b4"]

[ext_resource type="Texture2D" uid="uid://bimemgrqmquop" path="res://GrassTest.png" id="1_k1dng"]
[ext_resource type="Script" uid="uid://d1reetcp6cvup" path="res://camera_player.gd" id="1_nnask"]
[ext_resource type="Script" uid="uid://b7lpirrs0muws" path="res://player.gd" id="1_uc67x"]
[ext_resource type="Script" uid="uid://ykyei4umsfg4" path="res://grass_test.gd" id="2_cbkd1"]
[ext_resource type="Texture2D" uid="uid://8ftuale8ehyc" path="res://white.jpg" id="2_jkt0x"]
[ext_resource type="Texture2D" uid="uid://cnotyc4eo6eym" path="res://tree_sample.png" id="2_kmp1v"]
[ext_resource type="Script" uid="uid://8gcub7l4vaud" path="res://tree_generator.gd" id="2_nnask"]
[ext_resource type="Texture2D" uid="uid://bcjfjd3sy3xcd" path="res://rectangle.png" id="3_pat5w"]
[ext_resource type="Texture2D" uid="uid://dfwrw5sju3h1o" path="res://enemy.png" id="7_036ib"]
[ext_resource type="Script" uid="uid://dmkagfymfsy4b" path="res://enemy.gd" id="7_aphpr"]
[ext_resource type="Script" uid="uid://cyqohljrgbdt1" path="res://CheckArenaCollision.gd" id="9_gdfr4"]
[ext_resource type="Texture2D" uid="uid://cadbbwjslvvxh" path="res://arenaPlaceholder.png" id="11_jkt0x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pat5w"]
radius = 36.013885

[sub_resource type="Curve" id="Curve_jkt0x"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 200.585), 0.0, 0.0, 0, 0, Vector2(0.13373093, 200), 0.0, 0.0, 0, 0, Vector2(0.4883721, 92.13484), -525.6629, -525.6629, 0, 0, Vector2(1, 0), -180.08174, 0.0, 1, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_pat5w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.83139545, 0.056179762), 0.0, 0.0, 0, 0, Vector2(1, 0), 1.4, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_nnask"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t2ia"]
size = Vector2(252, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aphpr"]
size = Vector2(84, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uc67x"]
size = Vector2(94, 347)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pat5w"]
size = Vector2(1035, 40)

[node name="Node2D" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-28, -213)
collision_layer = 64
script = ExtResource("1_uc67x")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.036979165, 0.06203704)
texture = ExtResource("2_jkt0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_pat5w")

[node name="dash timer" type="Timer" parent="Player"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/dash timer"]
visible = false
amount = 50
texture = ExtResource("3_pat5w")
lifetime = 0.34
randomness = 0.47
fract_delta = false
local_coords = true
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(1, 40)
gravity = Vector2(-1000, 0)
linear_accel_min = 12.37
linear_accel_max = 12.37
linear_accel_curve = SubResource("Curve_jkt0x")
scale_amount_curve = SubResource("Curve_pat5w")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
limit_enabled = false
limit_left = -128
limit_bottom = 113
position_smoothing_enabled = true
script = ExtResource("1_nnask")
testingMode = false
cameraYOffset = 250.0

[node name="treeGenerator" type="StaticBody2D" parent="."]
position = Vector2(-75, 0)
script = ExtResource("2_nnask")

[node name="TreeSample" type="Sprite2D" parent="treeGenerator"]
scale = Vector2(0.9101563, 0.9101563)
texture = ExtResource("2_kmp1v")
offset = Vector2(0, -85)

[node name="CollisionShape2D" type="CollisionShape2D" parent="treeGenerator"]
shape = SubResource("CircleShape2D_nnask")
disabled = true

[node name="floorGenerator" type="StaticBody2D" parent="."]
script = ExtResource("2_cbkd1")
tile_number = 5.0
texture = ExtResource("1_k1dng")
Floor_Debug = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="floorGenerator"]
position = Vector2(-1, -27.5)
shape = SubResource("RectangleShape2D_3t2ia")
debug_color = Color(2.7915835e-06, 0.6120229, 0.6268773, 0.41960785)

[node name="Ground" type="Sprite2D" parent="floorGenerator"]
texture = ExtResource("1_k1dng")

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(363, -505)
collision_layer = 128
script = ExtResource("7_aphpr")
speed = 75.0
gravity = 500.0
max_speed = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_aphpr")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture = ExtResource("7_036ib")
centered = false
offset = Vector2(-104.965, -108)

[node name="AreaTrigger" type="Area2D" parent="."]
position = Vector2(209, -51)
collision_layer = 65
collision_mask = 65
script = ExtResource("9_gdfr4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger"]
position = Vector2(-37, -163.5)
shape = SubResource("RectangleShape2D_uc67x")
debug_color = Color(0, 0.6039216, 0.67058825, 1)

[node name="StoryArena" type="StaticBody2D" parent="."]
position = Vector2(319, 2031)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="StoryArena"]
scale = Vector2(5.18457, 5.18457)
texture = ExtResource("11_jkt0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(0, 249)
shape = SubResource("RectangleShape2D_pat5w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(-400, 249)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_pat5w")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(440, 249)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_pat5w")

[connection signal="body_entered" from="AreaTrigger" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AreaTrigger" to="AreaTrigger" method="_on_body_entered"]
